Добавляет кастомный чекбокс

--- a/index.html
+++ b/index.html
@@ -313,14 +313,16 @@
                         <label for="comment">Комментарий</label>
                             <textarea name="comment" id="comment" rows="5" placeholder="Введите текст"></textarea>
                     </div>
+
                     <div>
-                        <label class="politic" for="politic"> Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>
-                        <input class="checkbox" type="checkbox" name="politic" id="politic">
-                        
-                            <svg class="checkbox-icon" widht="16px" height="15px" >
-                                <use href="./images/icons.svg#icon-check-1"></use>
+                        <label class="politic" for="politic"> 
+                        <input class="checkbox" type="checkbox" name="checkbox" id="politic">
+                        <span class="checkbox-icon-box" >
+                            <svg class="checkbox-icon" height="15px" width="16px"  >
+                                <use href="./images/icons.svg#icon-icon-check-new"></use>
                             </svg>
-                                                   
+                        </span>
+                             Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>
                         </label>
                     </div>
                         <button class="button btn-form" type="submit">Отправить</button>
