Добавляет анимацию в форму

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                     </div>
                     <div class="form-field">
                         <label for="tel">Телефон</label>
-                        <input type="tel" name="tel" id="tel">
+                        <input class="form-input"  type="tel" name="tel" id="tel">
                         <svg class="icon-form">
                             <use href="./images/icons.svg#icon-phone-black" ></use>
                         </svg>
@@ -302,7 +302,7 @@
                     </div>
                     <div class="form-field">
                         <label for="mail">Почта</label>
-                        <input type="email" name="mail" id="mail">
+                        <input class="form-input"  type="email" name="mail" id="mail">
                         <svg class="icon-form">
                             <use href="./images/icons.svg#icon-email-black"></use>
                         </svg>
@@ -322,7 +322,8 @@
                                 <use href="./images/icons.svg#icon-icon-check-new"></use>
                             </svg>
                         </span>
-                             Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>
+                            Соглашаюсь с рассылкой и принимаю &nbsp; 
+                            <a href=""> Условия договора</a>
                         </label>
                     </div>
                         <button class="button btn-form" type="submit">Отправить</button>
