Добавляет в футер подписку на рассылку

--- a/portfolio.html
+++ b/portfolio.html
@@ -215,7 +215,18 @@
                     </li>
                 </ul>
             </div>
+        
+            <div class="subscribe-box">
+                <b class="follow">Подпишитесь на рассылку</b>
+                <div class="subscribe-form-box">
+                    <input class="subscribe-form" type="text" placeholder="E-mail">
+                    <button class="button btn-subscribe" type="submit">Подписаться
+                        <svg class="icon-send">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </div>
+            </div>
         </div>
-    
     </footer>
 </body>
